manifests/prod/backend-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-blue
  namespace: prod
  labels:
    app: backend
    color: blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
      color: blue
  template:
    metadata:
      labels:
        app: backend
        color: blue
    spec:
      containers:
      - name: backend
        image: us-central1-docker.pkg.dev/useful-variety-470306-n5/gke-repo/backend:latest
        ports:
        - containerPort: 5000
      - name: cloud-sql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.33.1
        command:
        - "/cloud_sql_proxy"
        - "-instances=useful-variety-470306-n5:us-central1:gke-db=tcp:3306"
        - "-credential_file=/secrets/key.json"
        volumeMounts:
        - name: cloudsql-instance-credentials
          mountPath: /secrets
          readOnly: true
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-sa
