manifests/prod/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: prod
spec:
  selector:
    app: frontend
    color: blue
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
